--- a/SafeBuy.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/SafeBuy.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -17,7 +17,10 @@
           <li class="nav-item" [routerLinkActive]='["link-active"]'>
             <a class="nav-link text-dark" [routerLink]='["/fetch-data"]'>Fetch data</a>
           </li>
-        </ul>
+          <li class="nav-item" [routerLinkActive]='["link-active"]'>
+            <a class="nav-link text-dark" [routerLink]='["/produto"]'>produto</a>
+          </li>
+        </ul> 
       </div>
     </div>
   </nav>
