--- a/SafeBuy.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/SafeBuy.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -18,8 +18,10 @@
             <a class="nav-link text-dark" [routerLink]='["/fetch-data"]'>Fetch data</a>
           </li>
           <li class="nav-item" [routerLinkActive]='["link-active"]'>
-            <a class="nav-link text-dark" [routerLink]='["/produto"]'>produto</a>
+            <a class="nav-link text-dark" [routerLink]='["/produto"]'>Produto</a>
           </li>
+          <li class="nav-item" [routerLinkActive]='["link-active"]'>
+            <a class="nav-link text-dark" [routerLink]='["/entrar"]'>Entrar</a>
         </ul> 
       </div>
     </div>
